# lightning-files

./: README.md  ROADMAP.md  angular.json  package.json  tsconfig.json
docker/: docker-compose.yml  qdrant.dockerfile
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.fastembed_cache/tmp/: 7rWAZ0A
src-tauri/capabilities/: default.json
src-tauri/print_err/: Cargo.toml
src-tauri/print_err/src/: lib.rs  macros.rs
src-tauri/src/: app_init.rs  lib.rs  main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/directory_nav_service/: file_ops.rs  file_retriever.rs  service.rs  user_input_validator.rs
src-tauri/src/core/filesystem/: file_retriever.rs  metadata_inspector.rs
src-tauri/src/core/filesystem/dtos/: file_dto.rs
src-tauri/src/directory_nav_service/: mod.rs  service.rs  state.rs  tauri_exports.rs
src-tauri/src/directory_nav_service/app_state/: files_display.rs  manager.rs  sys_info_service.rs
src-tauri/src/directory_nav_service/core/: mod.rs
src-tauri/src/directory_nav_service/core/drives/: get_sys_drives.rs  tauri_cmds.rs
src-tauri/src/directory_nav_service/core/files/: file_ops.rs  file_retriever.rs
src-tauri/src/directory_nav_service/core/sys/: info.rs  tauri_cmds.rs
src-tauri/src/directory_nav_service/dtos/: get_files_dtos.rs  inline_query_dto.rs  sort_files_by_dto.rs
src-tauri/src/directory_nav_service/models/: date_range.rs  drive_model.rs  get_files_model.rs  sys_file_model.rs  system_info_model.rs
src-tauri/src/directory_nav_service/services/watcher/: mod.rs  notifier.rs  service.rs  tauri_exports.rs
src-tauri/src/directory_nav_service/util/: metadata_inspector.rs  path_ops.rs
src-tauri/src/shared/: converters.rs  mod.rs
src-tauri/src/shared/collections/: popularity_set.rs
src-tauri/src/shared/dtos/: file_dto.rs
src-tauri/src/shared/models/: sys_file_model.rs
src-tauri/src/tantivy_file_indexer/: mod.rs  search_index_service.rs  service_container.rs  service_container_traits.rs
src-tauri/src/tantivy_file_indexer/app_data/: helper_methods.rs  json.rs
src-tauri/src/tantivy_file_indexer/configs/: file_indexer_config.rs
src-tauri/src/tantivy_file_indexer/converters/: date_converter.rs  doc_to_dto.rs
src-tauri/src/tantivy_file_indexer/crawlers/: crawler.rs  crawler_service.rs  dir_walker.rs  local_dispatcher.rs  walker.rs
src-tauri/src/tantivy_file_indexer/db/: sqlx_service.rs
src-tauri/src/tantivy_file_indexer/dtos/: add_to_crawler_queue.rs  file_dto_input.rs  search_params_dto.rs  streaming_search_dto.rs  vector_search_result.rs
src-tauri/src/tantivy_file_indexer/enums/: search_query_type.rs
src-tauri/src/tantivy_file_indexer/models/: auto_serializing_value.rs  emit_metadata_model.rs  interal_system_file.rs  recently_indexed_dir_model.rs  search_params_model.rs  tantivy_file_model.rs  vector_search_params_model.rs
src-tauri/src/tantivy_file_indexer/models/internal_system_file/: model.rs  traits.rs
src-tauri/src/tantivy_file_indexer/schemas/: file_schema.rs
src-tauri/src/tantivy_file_indexer/service/: exports.rs  querier.rs  search_index_service.rs
src-tauri/src/tantivy_file_indexer/services/app_save/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/tantivy_file_indexer/services/local_crawler/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/tantivy_file_indexer/shared/: async_retry.rs  cancel_task.rs  mod.rs
src-tauri/src/tantivy_file_indexer/util/: file_id_helper.rs  string.rs
src-tauri/system_info/: Cargo.toml
src-tauri/system_info/src/: cpu.rs  drives.rs  lib.rs  sys_info.rs
src-tauri/system_info/src/models/: mod.rs
(+555 files in other folders)
