[package]
name = "desktop-search"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwinbase"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
tantivy = "0.22.0"
walkdir = "2.3"
refind = "0.1.2"
rayon = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
sqlx = { version = "0.6", features = ["sqlite", "macros", "runtime-tokio-native-tls"] }
crossbeam = "0.8"
# stuff for vevtor:
vevtor = { path = "C:\\Users\\grieger\\vevtor" }

[package.metadata.tauri.windows]
requiresAdmin = true

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.dev]
opt-level = 0        # Minimize optimization level for faster builds
debug = true         # Keep debug info for development
incremental = true   # Enable incremental compilation (enabled by default)
lto = "off"          # Disable Link Time Optimization
codegen-units = 256  # Use more parallelism for code generation
