

[package]
name = "desktop-search"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
winapi = { version = "0.3", features = ["fileapi"] }
tokio = { version = "1.41.1", features = ["full"] }
dirs = "5.0"
tantivy = "0.22.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-schema = "0.16.0"
rand = "0.8.5"
rand_chacha = "0.3"
sqlx = { version = "0.8.2", features = ["sqlite"] }
vevtor = "0.1.0"
tantivy_ext = "0.1.0"
trash = "3.0" # for moving files to the recycle bin
tauri-plugin-drag = "2.0.0"

[package.metadata.tauri.windows]
requiresAdmin = true

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld", "-Z", "threads=14"]

[profile.dev]
opt-level = 0      # Minimize optimization level for faster builds
debug = true       # Keep debug info for development
incremental = true # Enable incremental compilation (enabled by default)
lto = "off"        # Disable Link Time Optimization
codegen-units = 16 # Use more parallelism for code generation
panic = "abort"    # Higher performance by disabling panic handlers.
